fix hambuger z-index issue

--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -8,7 +8,7 @@
     right: 40px;
     border-radius: 3px;
     transition: all 0.3s ease;
-    z-index: 1;
+    z-index: 9998;
 }
 
 .ham:hover + .ham-overlay {
@@ -29,7 +29,7 @@
     align-items: center;
     gap: 0.5rem;
     border-radius: 3px;
-    z-index: 2;
+    z-index: 9999;
     cursor: pointer;
 }
 
